docs/api/qiskit/0.19/qiskit.transpiler.passes.CheckMap.mdx
---
title: CheckMap (v0.19)
description: API reference for qiskit.transpiler.passes.CheckMap in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.CheckMap
---

# CheckMap

<Class id="qiskit.transpiler.passes.CheckMap" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passes/utils/check_map.py" signature="CheckMap(*args, **kwargs)" modifiers="class">
  Check if a DAG circuit is already mapped to a coupling map.

  Check if a DAGCircuit is mapped to coupling\_map by checking that all 2-qubit interactions are laid out to be physically close, setting the property `is_swap_mapped` to `True` or `False` accordingly.

  CheckMap initializer.

  **Parameters**

  **coupling\_map** ([*CouplingMap*](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")) – Directed graph representing a coupling map.

  ## Attributes

  <span id="checkmap-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.CheckMap.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="checkmap-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.CheckMap.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="checkmap-name" />

  ### name

  <Function id="qiskit.transpiler.passes.CheckMap.name" signature="CheckMap.name()">
    Return the name of the pass.
  </Function>

  <span id="checkmap-run" />

  ### run

  <Function id="qiskit.transpiler.passes.CheckMap.run" signature="CheckMap.run(dag)">
    Run the CheckMap pass on dag.

    If dag is mapped to coupling\_map, the property is\_swap\_mapped is set to True (or to False otherwise).

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – DAG to map.
  </Function>
</Class>

